# HowIsTheWeather

./: .env.example  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  adresy_api.txt  docker-compose.yml  layout.excalidraw  main.py  pyproject.toml  run.py
.github/actions/setup/: action.yaml
.github/workflows/: ci.yaml  ci.yml  code-quality.yaml  mypy.yml  pylint.yml  pytest.yml  ruff.yml
docs/: rekomendacje_pogoda.txt
scripts/: main.py
src/: app.py
src/core/: callbacks.py  constants.py  recommender.py  settings.py  weather.py
src/services/: cache.py  country_api.py  open_meteo_api.py  weatherapi.py
src/ui/: index.py  layout.py  weather_time_ui.py  weatherapi.py
src/ui/assets/: style.css
src/utils/: logger.py
tests/services/: test_recommender.py  test_weatherapi.py
