[project]
name = "howistheweather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=3.0.4",
    "google-genai>=1.19.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "python-dotenv>=1.1.0",
    "requests-mock>=1.12.1",
    "ruff>=0.11.13",
    "types-requests>=2.32.4.20250611",
]
